Fixes homepage videos on mobile

--- a/assets/sass/_elements.scss
+++ b/assets/sass/_elements.scss
@@ -946,6 +946,9 @@ main{
 			}
 		}
 	}
+	.home-anim-mobile{
+		display: none;
+	}
 }
 .committee,
 .speakers{
